<resources>
    <string name="app_name">RSMControl</string>

    <string name="action_settings">Settings</string>

    <string name="nfcStatusString">NFC Status</string>
    <string name="deviceInfoHeader">Device Info</string>
    <string name="stimSettingsHeader">Stimulation Settings</string>
    <string name="deviceStatusHeader">Device Status</string>

    <string name="deviceIDlabel">Device ID</string>
    <string name="firmwareLabel">Firmware Version</string>
    <string name="stimEnabledLabel">Stimulation</string>
    <string name="enableSwitchLabel">Stimulation</string>

    <string name="stimFrequencyLabel">Stimulation Frequency</string>
    <string name="stimFrequencyUnit">Hz</string>
    <string name="stimAmplitudeLabel">Stimulaton Amplitude</string>
    <string name="stimAmplitudeUnit">µA</string>
    <string name="pulseWidthLabel">Pulse width</string>
    <string name="pulseWidthUnit">µs</string>

    <string name="jitterLabel">Jitter level</string>
    <string-array name="jitter_levels">
        <item>no jitter</item>
        <item>0-1 µs</item>
        <item>0-2 µs</item>
        <item>0-4 µs</item>
    </string-array>

    <string name="lastUpdateLabel">Last update</string>
    <string name="uptimeLabel">Device Up-time</string>
    <string name="batteryVoltageLabel">Battery Voltage</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="programButtonName">Program Device</string>

    <string name="nfcAvailableEnabled">NFC available and enabled.</string>
    <string name="nfcAvailableDisabled">NFC available but disabled.</string>
    <string name="nfcBeamAvailableEnabled">Beam enabled.</string>
    <string name="nfcBeamAvailableDisabled">Beam disabled.</string>
    <string name="nfcBeamed">Message beamed.</string>
    <string name="noNfcMessage">NFC is not available.</string>
    <string name="nfcSettingEnabled">NFC enabled in settings.</string>
    <string name="nfcSettingDisabled">NFC disabled in settings.</string>

    <string name="readRSMMessageError">Read invalid RSM Module NDEF message.</string>
    <string name="readSingleRecordNDEFMessage">Read irrelevant single-record NDEF message.</string>
    <string name="readExternalRecordNDEFMessage">Read irrelevant external-record NDEF message.</string>
    <string name="readMultipleRecordNDEFMessage">Read irrelevant multi-record NDEF message.</string>
    <string name="readEmptyMessage">Read irrelevant empty message.</string>
    <string name="readNonNDEFMessage">Read irrelevant non-NDEF message.</string>
    <string name="readUnparsableNDEFMessage">Read irrelevant NDEF message but was unable to parse.</string>
    <string name="readRSMNDEFMessage">Read from valid RSM device.</string>


    <string name="tagNotWritable">Tag is not writable.</string>
    <string name="ndefWriteFailed">Write tag failed: %s</string>
    <string name="ndefWriteSuccess">Write tag successful.</string>

    <string name="wroteUnformattedTag">Wrote unfromatted tag.</string>
    <string name="wroteFormattedTag">Wrote formatted tag.</string>
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes.</string>


    <string name="tagLost">Tag lost</string>
    <string name="title_activity_nfcwrite">NFCWriteActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
